--- a/index.ipynb
+++ b/index.ipynb
@@ -54,9 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'title' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fd9d7aa55aaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hello\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'title' is not defined"
+     ]
+    }
+   ],
    "source": [
     "title(\"hello\")"
    ]
@@ -76,13 +88,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO, IM UPPERCASED\n",
+      "hello, im lowercased\n",
+      "Hello, im capitalized\n",
+      "Hello, Im Capitalized\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello, im uppercased\".upper())\n",
     "print(\"HELLO, IM LOWERCASED\".lower())\n",
-    "print(\"hello, im capitalized\".capitalize())"
+    "print(\"hello, im capitalized\".capitalize())\n",
+    "print('hello, im capitalized'.title())"
    ]
   },
   {
@@ -100,9 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "list_append = [1,2,3,4]\n",
     "list_append.append(5)\n",
@@ -113,7 +147,8 @@
     "list_one = [1,2,3]\n",
     "list_two = [4,5,6]\n",
     "list_one.extend(list_two)\n",
-    "print(list_one)"
+    "print(list_one)\n",
+    "list_one.extend(list_two)\n"
    ]
   },
   {
@@ -128,9 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name-key', 'key2', 'num_keys'])\n",
+      "dict_values(['example-dict', 'value2', 3])\n"
+     ]
+    }
+   ],
    "source": [
     "dictionary = {'name-key': 'example-dict', 'key2': 'value2', 'num_keys': 3}\n",
     "print(dictionary.keys())\n",
@@ -146,9 +190,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(str)"
    ]
@@ -171,18 +302,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'a', 'list'] {'this-is': 'a-dictionary'} this is a string and third argument\n"
+     ]
+    }
+   ],
    "source": [
     "print([\"this\", \"is\", \"a\", \"list\"], {\"this-is\": 'a-dictionary'}, \"this is a string and third argument\")"
    ]
@@ -196,18 +343,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type({})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(\"\")"
    ]
@@ -221,18 +390,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len({\"this-is\": 'a-dictionary', \"with-two\": \"key value pairs\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len([\"this\", \"is\", 1, \"list\", \"with\", 7, \"elements\"])"
    ]
@@ -246,9 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71.5"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum([10, 11, 13, 14, 9, 14.5])"
    ]
@@ -262,18 +464,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chhhh'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "min([\"this\", \"is\", \"a\", \"list\"])"
+    "min([\"this\", \"is\", \"ha\", \"chhhh\", \"list\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max([10, 11, 13, 14, 9, 14.5])"
    ]
@@ -342,9 +566,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "2. False\n",
+      "3. False\n",
+      "4. True\n",
+      "5. True\n",
+      "6. True\n",
+      "7. True\n"
+     ]
+    }
+   ],
    "source": [
     "print('1.', True != True) # False\n",
     "print('2.', False == True) # False\n",
@@ -366,9 +604,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "2. True\n",
+      "3. True\n",
+      "4. False\n",
+      "5. True\n",
+      "6. False\n",
+      "7. True\n",
+      "8. False\n",
+      "9. True\n"
+     ]
+    }
+   ],
    "source": [
     "print('1.', True > True) # False\n",
     "print('2.', True >= True) # True\n",
@@ -414,9 +668,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 0\n",
+      "2. False\n",
+      "3. 2\n",
+      "4. 3\n",
+      "5. 2\n",
+      "6. []\n",
+      "7. True\n",
+      "8. False\n",
+      "9. True\n",
+      "10. True\n",
+      "11. False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"1.\", 2 and 0) #\n",
     "print(\"2.\", False and 2) #\n",
@@ -451,9 +723,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "1A. True\n",
+      "2. False\n",
+      "3. True\n",
+      "4. False\n",
+      "4A. True\n",
+      "5. True\n",
+      "6. True\n",
+      "7. False\n",
+      "7A. True\n",
+      "8. True\n"
+     ]
+    }
+   ],
    "source": [
     "x = {'name': \"example\"}\n",
     "b = x\n",
@@ -486,20 +776,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
-    "my_condition = True\n",
+    "my_condition = False\n",
     "value = 10 if my_condition else 1000\n",
     "print(value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# let's say we are receiving two variables with different \n",
     "# values and we want to assign the higher value to a new variable\n",
@@ -509,6 +815,26 @@
     "# here we are saying, take the value of x if it is greater than the value of y. else take the value of y\n",
     "# since x > y evaluates to false, the ternary returns the value of the variable after the else statement or y\n",
     "print(new_variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = 5\n",
+    "d = 9\n",
+    "ol = z if z>d else d\n",
+    "print(ol)"
    ]
   },
   {
@@ -538,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
